--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
       <artifactId>saga-api-test</artifactId>
       <version>1.1.2</version>
     </dependency>
-    
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -116,6 +116,28 @@
           <sortDependencies>scope,groupId,artifactId</sortDependencies>
           <sortPlugins>groupId,artifactId</sortPlugins>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <configLocation>sun_checks.xml</configLocation>
+              <consoleOutput>true</consoleOutput>
+              <encoding>UTF-8</encoding>
+              <failsOnError>true</failsOnError>
+              <suppressionsLocation>${project.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
