--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>it.infn.ct</groupId>
   <artifactId>APIServerDaemon</artifactId>
-  <version>v0.0.10</version>
+  <version>0.0.10</version>
   <packaging>war</packaging>
 
   <properties>
@@ -96,7 +96,6 @@
 
   <build>
     <finalName>APIServerDaemon</finalName>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -124,16 +123,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-
-      <plugin>            
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <webXml>web/WEB-INF/web.xml</webXml>        
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
     </plugins>
