Adding repositories to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
@@ -91,6 +92,18 @@
     <repository>
       <id>maven.in2p3.fr</id>
       <url>http://maven.in2p3.fr</url>
+    </repository>
+    <repository>
+      <id>mulesoft-releases</id>
+      <name>MuleSoft Repository</name>
+      <url>http://repository.mulesoft.org/releases/</url>
+      <layout>default</layout>
+    </repository>
+    <repository>
+      <id>mulesoft-snapshots</id>
+      <name>MuleSoft Snapshot Repository</name>
+      <url>http://repository.mulesoft.org/snapshots/</url>
+      <layout>default</layout>
     </repository>
   </repositories>
 
