--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,25 @@
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
   </properties>
 
+    <repositories>
+    <repository>
+      <id>maven.in2p3.fr</id>
+      <url>http://maven.in2p3.fr</url>
+    </repository>
+    <repository>
+      <id>mulesoft-releases</id>
+      <name>MuleSoft Repository</name>
+      <url>http://repository.mulesoft.org/releases/</url>
+      <layout>default</layout>
+    </repository>
+    <repository>
+      <id>mulesoft-snapshots</id>
+      <name>MuleSoft Snapshot Repository</name>
+      <url>http://repository.mulesoft.org/snapshots/</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
+
   <dependencies>
 
     <dependency>
@@ -86,26 +105,14 @@
       <version>1.10.19</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
 
-  <repositories>
-    <repository>
-      <id>maven.in2p3.fr</id>
-      <url>http://maven.in2p3.fr</url>
-    </repository>
-    <repository>
-      <id>mulesoft-releases</id>
-      <name>MuleSoft Repository</name>
-      <url>http://repository.mulesoft.org/releases/</url>
-      <layout>default</layout>
-    </repository>
-    <repository>
-      <id>mulesoft-snapshots</id>
-      <name>MuleSoft Snapshot Repository</name>
-      <url>http://repository.mulesoft.org/snapshots/</url>
-      <layout>default</layout>
-    </repository>
-  </repositories>
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.12.1.GA</version>
+    </dependency>
+
+  </dependencies>
 
   <build>
     <finalName>APIServerDaemon</finalName>
